[package]
name = "forumla"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dirs = "6.0.0"
params_macro = { path = "./params_macro" }
urlencoding = "2.1.3"

[workspace]
members = [".", "params_macro"]

[workspace.metadata.rust-analyzer]
procMacro.enable = true
procMacro.attributes.enable = true
