[package]
name = "forumla"
version = "0.1.0"
description = "A cargo crate for accessing and analyzing Formula 1 results, schedules, timing data & telemetry"
homepage = "https://github.com/FloatingComet62/forumla"
repository = "https://github.com/FloatingComet62/forumla"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
dirs = "6.0.0"
forumla-macros = { version = "0.1.0", path = "./forumla-macros" }
urlencoding = "2.1.3"

[dev-dependencies]
tracing-subscriber = "0.3.23"

[workspace]
members = [".", "forumla-macros"]

[workspace.metadata.rust-analyzer]
procMacro.enable = true
procMacro.attributes.enable = true
